--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "checkJs": false,
     "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "newLine": "lf"
   }
 }
